# serverless-python-example

./: .gitignore  ReadMe.md  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
